test/integration/page-config/pages/invalid/no-init.js
// export let config

export default () => <p>hello world</p>
